🎈 implement fit logic using clips.

--- a/src/utils/RectToRectTransition.scss
+++ b/src/utils/RectToRectTransition.scss
@@ -4,9 +4,10 @@
 }
 
 .content {
+	position: fixed;
 	overflow: hidden;
 	top: 0;
 	left: 0;
 	transform-origin: top left;
-	transition-property: transform;
+	transition-property: transform, clip;
 }
